# gogogo-backend

./: .dockerignore  .gitignore  README.md  main.py  plan.txt  pyproject.toml
.github/: deploy.yml
.github/workflows/: deploy.yml
agent_thoughts/: README.md  openapi.json
alembic/: env.py
alembic/versions/: 41cefac559f6_add_chat_id_to_telegram_users.py  8aac70bb2863_add_role_and_language_to_telegram_users.py  98dc4eb9fd6c_add_ride_indexes.py  bc0384368c26_init_tables.py  be9dde59f8f0_add_is_active_column.py  bfdb177cd397_add_price_to_ride_offers.py  f1e915cfbf2e_init_rides.py
app/configurations/: __init__.py  base.py  cloudinary.py  constants.py  database.py  utilities.py
app/core/: celery_app.py
app/domain/interfaces/: media_service.py
app/domain/models/: __init__.py  base.py  ride.py  user.py
app/infrastructure/connections/database/: session.py
app/infrastructure/dependencies/: providers.py
app/infrastructure/repositories/: ride.py  user.py
app/infrastructure/services/: cloudinary.py
app/representations/api/v1/: rides.py  telegram.py  users.py
app/representations/dtos/: ride.py  user.py
app/representations/schemas/: user.py
app/services/: ride_service.py  tasks.py  user_service.py
app/utils/: normalization.py
docker/: Dockerfile.local  Dockerfile.prod  docker-compose.infra.yml  launch-local.yml
tests/services/: test_ride_search.py  test_ride_service.py  test_user_service.py
